SERVER-22869 Guard against an already saved cursor in WT RandomCursor

(cherry picked from commit 4d24b36e82e5b2ddba32b30c5bc2499d635d1397)